--- a/Solution/GGzApplicatie/GGzApplicatie/GGzApplicatie.csproj
+++ b/Solution/GGzApplicatie/GGzApplicatie/GGzApplicatie.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="Helpers\User\DatabaseHelperClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
@@ -130,13 +131,12 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
-    <None Include="GGzDB.db" />
+    <Content Include="GGzDB.db" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\Admin\" />
     <Folder Include="Helpers\Score\" />
-    <Folder Include="Helpers\User\" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\HomePage.xaml">
