--- a/Solution/GGzApplicatie/GGzApplicatie/GGzApplicatie.csproj
+++ b/Solution/GGzApplicatie/GGzApplicatie/GGzApplicatie.csproj
@@ -97,9 +97,11 @@
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="Helpers\DatabaseHelperClass.cs" />
-    <Compile Include="Helpers\ScoreHelper.cs" />
-    <Compile Include="Helpers\ScoreHelperPrevious.cs" />
+    <Compile Include="Helpers\QuestionHelper.cs" />
+    <Compile Include="Helpers\OldDateScoreHelper.cs" />
+    <Compile Include="Helpers\NewDateScoreHelper.cs" />
     <Compile Include="Helpers\UserHelper.cs" />
+    <Compile Include="Model\Question.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
@@ -118,8 +120,8 @@
     <Compile Include="Views\ResultPage.xaml.cs">
       <DependentUpon>ResultPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\TestPage.xaml.cs">
-      <DependentUpon>TestPage.xaml</DependentUpon>
+    <Compile Include="Views\QuestionPage.xaml.cs">
+      <DependentUpon>QuestionPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserInfoPage.xaml.cs">
       <DependentUpon>UserInfoPage.xaml</DependentUpon>
@@ -170,7 +172,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\TestPage.xaml">
+    <Page Include="Views\QuestionPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
